--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    image: java_springv1
+    image: t1_juicevrld_v1
     build: .
     ports:
       - "8091:8091"
